[package]
name = "rust-webgl"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "console",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "EventListener",
    "HtmlCanvasElement",
    "MouseEvent",
    "Window",
]